<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditActivity"
    android:orientation="vertical">
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textSize="100px"
    android:text="@string/usuario"></TextView>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="100px"
        android:id="@+id/et_nombre"></EditText>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="100px"
        android:text="@string/contraseña"></TextView>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="100px"
        android:id="@+id/et_contraseña"></EditText>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="100px"
        android:text="@string/repetirContraseña"></TextView>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="100px"
        android:id="@+id/et_repetirContraseña"></EditText>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300px"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="100px"
            android:layout_marginTop="75px"
            android:text="@string/tipo"></TextView>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:id="@+id/radioGroup">
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="150px"
                    android:text="@string/admin"
                    android:id="@+id/rb_admin"></RadioButton>
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="150px"
                    android:text="@string/usuario"
                    android:id="@+id/rb_usuario"></RadioButton>
            </RadioGroup>
        </LinearLayout>
    </LinearLayout>
    <Button
        android:layout_width="400px"
        android:layout_height="200px"
        android:layout_gravity="center"
        android:text="@string/guardar"
        android:id="@+id/ed_btn_save"
        android:drawableLeft="@drawable/ic_baseline_draw_24"></Button>
</LinearLayout>